--- a/find-team-mates/angular.json
+++ b/find-team-mates/angular.json
@@ -101,6 +101,7 @@
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/aos/dist/aos.js"
+              ,"../node_modules/font-awesome/css/font-awesome.css"
             ]
           }
         },
