--- a/find-team-mates/angular.json
+++ b/find-team-mates/angular.json
@@ -91,8 +91,9 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css",
+            
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              
               "src/styles.css"
           
             ],
@@ -100,8 +101,8 @@
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
-              "node_modules/aos/dist/aos.js"
-              ,"../node_modules/font-awesome/css/font-awesome.css"
+             
+              "../node_modules/font-awesome/css/font-awesome.css"
             ]
           }
         },
