--- a/find-team-mates/angular.json
+++ b/find-team-mates/angular.json
@@ -28,7 +28,11 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/bootstrap/dist/js/bootstrap.js"
+             
+            ]
           },
           "configurations": {
             "production": {
@@ -91,18 +95,14 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-            
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              
-              "src/styles.css"
-          
+              "styles.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/popper.js/dist/umd/popper.min.js",
-             
-              "../node_modules/font-awesome/css/font-awesome.css"
+              "node_modules/popper.js/dist/umd/popper.js",
+              "node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/font-awesome/css/font-awesome.css"
             ]
           }
         },
