--- a/find-team-mates/angular.json
+++ b/find-team-mates/angular.json
@@ -20,13 +20,14 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
-              "src/favicon.ico",
+              "src/favicon.png",
               "src/assets"
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/angular-notifier/styles.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
