--- a/find-team-mates/package.json
+++ b/find-team-mates/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "angular-notifier": "^6.0.1",
     "angular-popper": "^2.0.1",
     "bootstrap": "^4.5.2",
     "font-awesome": "^4.7.0",
