--- a/find-team-mates/package.json
+++ b/find-team-mates/package.json
@@ -2,19 +2,23 @@
   "name": "find-team-mates",
   "version": "0.0.0",
   "scripts": {
+   
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --output-path find-team-mates --aot --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.9",
     "@angular/cdk": "~9.2.1",
+    "@angular/cli": "~9.1.7",
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
+    "@angular/compiler-cli": "~9.1.9",
     "@angular/core": "~9.1.9",
     "@angular/forms": "~9.1.9",
     "@angular/localize": "~9.1.9",
@@ -26,6 +30,7 @@
     "angular-notifier": "^6.0.1",
     "angular-popper": "^2.0.1",
     "bootstrap": "^4.5.2",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
@@ -52,5 +57,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
+  },
+  "engines": {
+    "node": "12.16.3",
+    "npm": "6.14.4"
   }
 }
